--- a/JizzOmater/Base.lproj/Main.storyboard
+++ b/JizzOmater/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8118" systemVersion="15A172" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BV1-FR-VrT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kgu-NB-bpQ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8098"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BV1-FR-VrT" customClass="GameViewController" customModule="JizzOmater" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8aa-yV-Osq"/>
                         <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
@@ -15,11 +17,109 @@
                     <view key="view" multipleTouchEnabled="YES" contentMode="scaleToFill" id="3se-qz-xqx" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="611" y="372"/>
+        </scene>
+        <!--Name Form View Controller-->
+        <scene sceneID="zHa-OK-Sh2">
+            <objects>
+                <viewController id="Kgu-NB-bpQ" customClass="nameFormViewController" customModule="JizzOmater" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="20w-Gj-r7r"/>
+                        <viewControllerLayoutGuide type="bottom" id="FRR-X7-a1f"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0zU-3p-k6q">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter Nickname: " lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smm-Hw-sX8">
+                                <rect key="frame" x="20" y="81" width="565" height="45.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="38"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="67C-zO-7W8">
+                                <rect key="frame" x="20" y="144" width="560" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="nameFormTextField:" destination="Kgu-NB-bpQ" eventType="editingDidEnd" id="ZPR-2y-VOU"/>
+                                    <action selector="nameTextForm:" destination="Kgu-NB-bpQ" eventType="editingDidEnd" id="vP6-wb-Ucz"/>
+                                </connections>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGg-E5-p9V">
+                                <rect key="frame" x="20" y="220.5" width="560" height="30"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Jizz Time!">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="sWK-gQ-UQw" kind="presentation" id="c7h-E7-Ff8"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="dGg-E5-p9V" secondAttribute="leading" id="00z-dK-H71"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="67C-zO-7W8" secondAttribute="leading" id="2Dl-GI-1f6"/>
+                            <constraint firstItem="smm-Hw-sX8" firstAttribute="top" secondItem="20w-Gj-r7r" secondAttribute="bottom" constant="61" id="4OC-Ig-tSG"/>
+                            <constraint firstItem="67C-zO-7W8" firstAttribute="top" secondItem="smm-Hw-sX8" secondAttribute="bottom" constant="17.5" id="Bh1-Hc-9x0"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dGg-E5-p9V" secondAttribute="trailing" id="DeA-8a-XD5"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="smm-Hw-sX8" secondAttribute="leading" id="H9d-rK-rg2"/>
+                            <constraint firstItem="dGg-E5-p9V" firstAttribute="top" secondItem="67C-zO-7W8" secondAttribute="bottom" constant="46.5" id="KBf-sx-H9H"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="smm-Hw-sX8" secondAttribute="trailing" constant="-5" id="f9m-TG-xUm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="67C-zO-7W8" secondAttribute="trailing" id="k7A-p9-H3g"/>
+                            <constraint firstItem="dGg-E5-p9V" firstAttribute="top" secondItem="67C-zO-7W8" secondAttribute="bottom" constant="46.5" id="teg-mb-ehm"/>
+                            <constraint firstItem="67C-zO-7W8" firstAttribute="centerX" secondItem="0zU-3p-k6q" secondAttribute="centerX" id="zRL-2v-eyg"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HmB-uN-NMQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-783" y="372"/>
+        </scene>
+        <!--Waiting Roomto Countdown View Controller-->
+        <scene sceneID="egZ-OU-X97">
+            <objects>
+                <viewController id="sWK-gQ-UQw" customClass="waitingRoomtoCountdownViewController" customModule="JizzOmater" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZLR-QO-hl3"/>
+                        <viewControllerLayoutGuide type="bottom" id="NK2-GJ-8LJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sT0-gj-ilX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Waiting Room / Countdown Placeholder" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oln-ub-Ny8">
+                                <rect key="frame" x="20" y="60" width="560" height="483.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQr-3L-TXJ">
+                                <rect key="frame" x="116" y="20" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <segue destination="BV1-FR-VrT" kind="presentation" id="B20-ww-Ibm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Oln-ub-Ny8" firstAttribute="top" secondItem="ZLR-QO-hl3" secondAttribute="bottom" constant="40" id="1fb-u4-pqJ"/>
+                            <constraint firstItem="NK2-GJ-8LJ" firstAttribute="top" secondItem="Oln-ub-Ny8" secondAttribute="bottom" constant="56.5" id="4eE-ju-SOC"/>
+                            <constraint firstItem="Oln-ub-Ny8" firstAttribute="trailing" secondItem="sT0-gj-ilX" secondAttribute="trailingMargin" id="pye-i5-ftX"/>
+                            <constraint firstItem="Oln-ub-Ny8" firstAttribute="leading" secondItem="sT0-gj-ilX" secondAttribute="leadingMargin" id="uej-k1-l3H"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CHl-eN-z06" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-95" y="372"/>
         </scene>
     </scenes>
 </document>
