--- a/JizzOmater/Base.lproj/Main.storyboard
+++ b/JizzOmater/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Wx8-cM-KoB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kgu-NB-bpQ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -32,14 +32,17 @@
                     <navigationItem key="navigationItem" id="zy9-kQ-siP">
                         <barButtonItem key="rightBarButtonItem" title="Item" id="rQK-Gd-9zY">
                             <connections>
-                                <segue destination="BV1-FR-VrT" kind="presentation" identifier="connectionsToGameSegue" id="Cl7-Nh-8kM"/>
+                                <action selector="tableButtonPressed:" destination="Rrb-KH-uyg" id="taG-Sr-sZ9"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <segue destination="BV1-FR-VrT" kind="presentation" identifier="connectionsTableViewSegue" id="UqE-19-niH"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BOs-gn-Nho" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="25" y="372"/>
+            <point key="canvasLocation" x="17" y="372"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="tXr-a1-R10">
@@ -139,9 +142,6 @@
                                 <rect key="frame" x="20" y="135" width="560" height="37.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
-                                <connections>
-                                    <action selector="nickNameTextField:" destination="Kgu-NB-bpQ" eventType="editingDidEnd" id="YUl-RU-MWr"/>
-                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGg-E5-p9V">
                                 <rect key="frame" x="20" y="219" width="560" height="45"/>
@@ -153,8 +153,7 @@
                                     <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="playButtonPressed:" destination="Kgu-NB-bpQ" eventType="touchUpInside" id="0PZ-0z-FDN"/>
-                                    <segue destination="Wx8-cM-KoB" kind="presentation" identifier="connectionsTableViewSegue" id="qKy-AM-k4s"/>
+                                    <action selector="playButtonPressed" destination="Kgu-NB-bpQ" eventType="touchUpInside" id="0UR-Y8-G4P"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -176,11 +175,12 @@
                     </view>
                     <connections>
                         <outlet property="nicknameTextField" destination="67C-zO-7W8" id="xj4-HB-B25"/>
+                        <segue destination="Wx8-cM-KoB" kind="presentation" identifier="connectionsTableViewSegue" id="Gsb-mG-Mj4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HmB-uN-NMQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-719" y="-346"/>
+            <point key="canvasLocation" x="-719" y="-384"/>
         </scene>
         <!--Winning Final View Controller-->
         <scene sceneID="OWm-LK-Bap">
