--- a/JizzOmater/Base.lproj/Main.storyboard
+++ b/JizzOmater/Base.lproj/Main.storyboard
@@ -25,18 +25,24 @@
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="Rrb-KH-uyg" id="L8a-s1-wcd"/>
+                            <outlet property="dataSource" destination="Rrb-KH-uyg" id="WIp-Z1-46q"/>
                             <outlet property="delegate" destination="Rrb-KH-uyg" id="hLu-gL-VLj"/>
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="zy9-kQ-siP">
-                        <barButtonItem key="rightBarButtonItem" title="Item" id="rQK-Gd-9zY">
+                        <barButtonItem key="leftBarButtonItem" title="Visibility" id="9jj-ET-ahZ">
                             <connections>
-                                <action selector="tableButtonPressed:" destination="Rrb-KH-uyg" id="taG-Sr-sZ9"/>
+                                <action selector="startStopAdvertising:" destination="Rrb-KH-uyg" id="jqV-ZD-8hh"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Play Solo" id="rQK-Gd-9zY">
+                            <connections>
+                                <action selector="playSoloButtonPressed:" destination="Rrb-KH-uyg" id="YCY-aO-jDg"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="connectionsTableView" destination="kZb-h9-6Sl" id="R9V-8X-ibk"/>
                         <segue destination="BV1-FR-VrT" kind="presentation" identifier="connectionsTableViewSegue" id="UqE-19-niH"/>
                     </connections>
                 </tableViewController>
@@ -58,7 +64,6 @@
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
-                        <segue destination="V1o-6A-Cvy" kind="presentation" identifier="gameSceneToWinnerSegue" id="4dc-d9-mqj"/>
                         <segue destination="zyh-ch-o7C" kind="presentation" identifier="gameSceneToFinalSegue" id="B1h-qf-Sd4"/>
                     </connections>
                 </viewController>
@@ -78,27 +83,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loser" translatesAutoresizingMaskIntoConstraints="NO" id="1ZF-yQ-PgZ">
-                                <rect key="frame" x="20" y="171" width="560" height="258"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1QJ-C4-Bs6">
-                                <rect key="frame" x="155" y="99" width="291" height="42"/>
+                                <rect key="frame" x="20" y="93" width="560" height="54"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="291" id="2wk-LT-VYi"/>
+                                    <constraint firstAttribute="height" constant="54" id="zdE-Z0-vh7"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loser" translatesAutoresizingMaskIntoConstraints="NO" id="1ZF-yQ-PgZ">
+                                <rect key="frame" x="20" y="155" width="560" height="425"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1ZF-yQ-PgZ" firstAttribute="trailing" secondItem="ywe-dX-rm8" secondAttribute="trailingMargin" id="LPH-d9-tny"/>
-                            <constraint firstItem="etk-QW-IGF" firstAttribute="top" secondItem="1ZF-yQ-PgZ" secondAttribute="bottom" constant="171" id="dVM-i6-cw7"/>
-                            <constraint firstItem="1ZF-yQ-PgZ" firstAttribute="top" secondItem="1QJ-C4-Bs6" secondAttribute="bottom" constant="30" id="idU-Ga-AqJ"/>
-                            <constraint firstItem="1ZF-yQ-PgZ" firstAttribute="leading" secondItem="ywe-dX-rm8" secondAttribute="leadingMargin" id="mFd-cA-TRh"/>
-                            <constraint firstItem="1ZF-yQ-PgZ" firstAttribute="centerY" secondItem="ywe-dX-rm8" secondAttribute="centerY" id="sSg-fS-Xuu"/>
-                            <constraint firstItem="1QJ-C4-Bs6" firstAttribute="centerX" secondItem="1ZF-yQ-PgZ" secondAttribute="centerX" id="wUb-ul-Hl3"/>
+                            <constraint firstItem="etk-QW-IGF" firstAttribute="top" secondItem="1ZF-yQ-PgZ" secondAttribute="bottom" constant="20" id="ATP-TF-BY1"/>
+                            <constraint firstItem="1QJ-C4-Bs6" firstAttribute="trailing" secondItem="1ZF-yQ-PgZ" secondAttribute="trailing" id="OPC-J4-eiQ"/>
+                            <constraint firstItem="1QJ-C4-Bs6" firstAttribute="top" secondItem="aML-2K-9U4" secondAttribute="bottom" constant="29" id="RnV-Y2-SJv"/>
+                            <constraint firstItem="1QJ-C4-Bs6" firstAttribute="leading" secondItem="ywe-dX-rm8" secondAttribute="leadingMargin" id="UV8-Tc-JmH"/>
+                            <constraint firstItem="1QJ-C4-Bs6" firstAttribute="trailing" secondItem="ywe-dX-rm8" secondAttribute="trailingMargin" id="kiQ-3F-xBG"/>
+                            <constraint firstItem="1QJ-C4-Bs6" firstAttribute="leading" secondItem="1ZF-yQ-PgZ" secondAttribute="leading" id="pcb-OC-ZYA"/>
+                            <constraint firstItem="1ZF-yQ-PgZ" firstAttribute="top" secondItem="1QJ-C4-Bs6" secondAttribute="bottom" constant="8" symbolic="YES" id="y18-Zm-24p"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dNY-XX-IwZ">
@@ -110,7 +116,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="finalImage" destination="1ZF-yQ-PgZ" id="t35-1U-Zog"/>
+                        <outlet property="finalImage" destination="1ZF-yQ-PgZ" id="GdY-e9-iio"/>
                         <outlet property="scoreLabel" destination="1QJ-C4-Bs6" id="H2d-Wo-dva"/>
                         <segue destination="l2g-lP-auA" kind="unwind" identifier="unwindToGame" unwindAction="unwindToGame:" id="7vy-hy-BKc"/>
                     </connections>
@@ -182,44 +188,6 @@
             </objects>
             <point key="canvasLocation" x="-719" y="-384"/>
         </scene>
-        <!--Winning Final View Controller-->
-        <scene sceneID="OWm-LK-Bap">
-            <objects>
-                <viewController id="EKT-Kg-yyY" customClass="WinningFinalViewController" customModule="JizzOmater" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="3fj-j9-blH"/>
-                        <viewControllerLayoutGuide type="bottom" id="Som-Aj-71F"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Kcg-s3-XcM">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="vintage-retro-nude-sofa" translatesAutoresizingMaskIntoConstraints="NO" id="5NO-Ed-FAu">
-                                <rect key="frame" x="31" y="112" width="266" height="319"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="Ojd-AC-25B">
-                        <barButtonItem key="leftBarButtonItem" title="Play Again" id="KYL-Ts-1Pn">
-                            <color key="tintColor" red="0.17341095916434984" green="0.83080929487179489" blue="0.13040566057145034" alpha="1" colorSpace="calibratedRGB"/>
-                            <connections>
-                                <action selector="playAgainButtonPressed:" destination="EKT-Kg-yyY" id="T1T-mp-f2x"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <segue destination="mJr-pJ-bga" kind="unwind" unwindAction="unwindToGame:" id="bE6-Ow-zNc"/>
-                        <segue destination="mJr-pJ-bga" kind="unwind" unwindAction="unwindToGame:" id="dI0-Au-ajw"/>
-                        <segue destination="mJr-pJ-bga" kind="unwind" unwindAction="unwindToGame:" id="mLK-vh-XBo"/>
-                        <segue destination="mJr-pJ-bga" kind="unwind" unwindAction="unwindToWinnerLogin:" id="SJ5-wq-ouD"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aat-4U-2u3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="mJr-pJ-bga" userLabel="Exit" sceneMemberID="exit"/>
-            </objects>
-            <point key="canvasLocation" x="710" y="1120"/>
-        </scene>
         <!--Navigation Controller-->
         <scene sceneID="8Cb-Cx-ATi">
             <objects>
@@ -237,24 +205,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="anH-AG-AOV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1380" y="372"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="1O4-0U-ofq">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V1o-6A-Cvy" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EhR-GX-Z8q">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="EKT-Kg-yyY" kind="relationship" relationship="rootViewController" id="xVf-Ac-7e2"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xYT-QJ-zLN" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="25" y="1120"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="t7K-ie-jc9">
@@ -277,6 +227,5 @@
     </scenes>
     <resources>
         <image name="loser" width="189" height="109"/>
-        <image name="vintage-retro-nude-sofa" width="327" height="400"/>
     </resources>
 </document>
