added app icon images, knockout images, changed score to reflect acceleration in x direction

--- a/JizzOmater/Base.lproj/LaunchScreen.storyboard
+++ b/JizzOmater/Base.lproj/LaunchScreen.storyboard
@@ -18,13 +18,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TN-AE-cmg">
-                                <rect key="frame" x="20" y="28" width="560" height="544"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1TN-AE-cmg">
+                                <rect key="frame" x="20" y="28" width="573" height="544"/>
                                 <attributedString key="attributedText">
-                                    <fragment content=" JIZZ-O-MATE-R">
+                                    <fragment content=" PUNCH-O-MATE-R">
                                         <attributes>
-                                            <color key="NSColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="63" name="AmericanTypewriter"/>
+                                            <color key="NSColor" red="0.0" green="0.58639823717948714" blue="0.580908520232298" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="57" name="AmericanTypewriter"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
